--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "expo": "^54.0.9",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "react-native-url-handler": "^0.4.3",
-    "uuid": "^9.0.1"
+    "react-native-url-handler": "^0.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -36,7 +36,6 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
-    "@types/uuid": "^10.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
